projects/compiler/test/typechecker/match/error_duplicate_Enum_variant.out
Error at %TEST_DIR%/typechecker/match/error_duplicate_Enum_variant.abra:7:3
Duplicate match case
  |    Color.Red => 3,
       ^
